report processor impl/ task schedule fault tolerance/ refactor task scheduler/ add task status machine/ (#26)
conflicts resolve
# Conflicts:
#	server/controller-sdk/src/main/java/ai/starwhale/mlops/api/protocol/report/ReportResponse.java
#	server/controller-sdk/src/main/java/ai/starwhale/mlops/domain/task/Task.java
#	server/controller/src/main/java/ai/starwhale/mlops/schedule/SimpleTaskScheduler.java
#	server/controller/src/main/java/ai/starwhale/mlops/schedule/TaskScheduler.java

Co-authored-by: renyanda <renyanda@megvii.com>