@@ -7,19 +7,13 @@
 
 package ai.starwhale.mlops.schedule;
 
-import static ai.starwhale.mlops.domain.job.Job.JobStatus.CREATED;
-
-import ai.starwhale.mlops.domain.job.Job;
-import ai.starwhale.mlops.domain.job.Job.JobStatus;
-import ai.starwhale.mlops.domain.job.JobSpliter;
 import ai.starwhale.mlops.domain.node.Device;
 import ai.starwhale.mlops.domain.node.Device.Clazz;
 import ai.starwhale.mlops.domain.node.Node;
 import ai.starwhale.mlops.domain.task.EvaluationTask;
 import ai.starwhale.mlops.exception.SWValidationException;
 import ai.starwhale.mlops.exception.SWValidationException.ValidSubject;
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -31,27 +25,23 @@ import lombok.extern.slf4j.Slf4j;
  * a simple implementation of JobScheduler
  */
 @Slf4j
-public class SimpleJobScheduler implements JobScheduler {
-
-    final JobSpliter jobSpliter;
+public class SimpleTaskScheduler implements TaskScheduler {
 
     final Map<Device.Clazz, ConcurrentLinkedQueue<EvaluationTask>> taskQueueTable;
 
-    public SimpleJobScheduler(JobSpliter jobSpliter) {
-        this.jobSpliter = jobSpliter;
-        Map<Device.Clazz, ConcurrentLinkedQueue<EvaluationTask>> taskQueueTableInitialization = new HashMap<>();
-        taskQueueTableInitialization.put(Clazz.CPU, new ConcurrentLinkedQueue<>());
-        taskQueueTableInitialization.put(Clazz.GPU, new ConcurrentLinkedQueue<>());
-        this.taskQueueTable = Collections.unmodifiableMap(taskQueueTableInitialization);
+    public SimpleTaskScheduler() {
+        this.taskQueueTable = Map.of(Clazz.CPU, new ConcurrentLinkedQueue<>(),
+            Clazz.GPU, new ConcurrentLinkedQueue<>());
+        loadTasks();
+    }
+
+    //TODO load tasks that is new created
+    private void loadTasks() {
     }
 
     @Override
-    public void takeJob(Job job) {
-        validJob(job);
-        List<EvaluationTask> splitTasks = jobSpliter.split(job);
-        taskQueueTable.get(job.getJobRuntime().getDeviceClass()).addAll(splitTasks);
-        job.setStatus(JobStatus.SPLIT);
-        //save job status TODO
+    public void adoptTasks(Collection<EvaluationTask> evaluationTasks, Device.Clazz deviceClass) {
+        taskQueueTable.get(deviceClass).addAll(evaluationTasks);
     }
 
     @Override
@@ -73,18 +63,4 @@ public class SimpleJobScheduler implements JobScheduler {
         }
     }
 
-    public void validJob(Job job) {
-        if (null == job
-            || null == job.getStatus()
-            || null == job.getJobRuntime()
-            || null == job.getJobRuntime().getDeviceClass()) {
-            log.error("bad job taken, null or null field");
-            throw new SWValidationException(ValidSubject.JOB);
-        }
-        if (CREATED != job.getStatus()) {
-            log.error("only CREATED status job shall be scheduled but the status is {}",
-                job.getStatus());
-            throw new SWValidationException(ValidSubject.JOB);
-        }
-    }
 }
